# SFML-pong

./: .clang-format  .gitignore  CMakeLists.txt  SFML-pong  main.cpp
inc/: AssetManager.hpp  Ball.hpp  Entity.hpp  Game.hpp  HUD.hpp  Obstacles.hpp  User.hpp
src/: AssetManager.cpp  Ball.cpp  Entity.cpp  Game.cpp  HUD.cpp  Obstacles.cpp  User.cpp
test/: RunAllTest.cpp
